--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.1-SNAPSHOT'
+	id 'fabric-loom' version '1.6-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -22,22 +22,14 @@ loom {
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings loom.layered() {
-		officialMojangMappings()
-		parchment("org.parchmentmc.data:parchment-${project.parchment_version}@zip")
-	}
+	mappings loom.officialMojangMappings()
 
 	// Fabric
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Scribe
-	modApi "com.github.Team-Abode:scribe:${rootProject.scribe_version}"
-	include "com.github.Team-Abode:scribe:${rootProject.scribe_version}"
-
-	// Fabric ASM
-	modImplementation "com.github.Chocohead:Fabric-ASM:${fabric_asm_version}"
-	include "com.github.Chocohead:Fabric-ASM:${fabric_asm_version}"
+	modApi "com.github.Team-Abode:sketch:${rootProject.sketch_version}"
 }
 
 base {
@@ -53,14 +45,14 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
+	it.options.release = 21
 }
 
 java {
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
