--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,14 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	minecraft_version=1.20.4
-	loader_version=0.15.7
+	minecraft_version=1.20.5
+	loader_version=0.15.10
 
 # Mod Properties
-	mod_version = 2.5.0
+	mod_version = 2.6.0
 	maven_group = com.teamabode
 	archives_base_name = guarding
 
 # Dependencies
-	fabric_version=0.96.11+1.20.4
-	scribe_version=1.20.4-0.7.2-alpha
-	parchment_version=1.20.2:2023.12.10
-	fabric_asm_version=v2.3
+	fabric_version=0.97.5+1.20.5
+	sketch_version=1.20.5-0.9.0
