--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
+	mod_id=verdance
 	minecraft_version=1.21.1
 	loader_version=0.15.11
 
